# eda_log-ai

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
docs/: architecture.md  frontend_design.md  interview_demo.md
frontend/: app.js  index.html  styles.css
knowledge_base/: cases.json
scripts/: deploy_test.ps1  run_api.ps1  run_demo.ps1
src/eda_log_ai/: __init__.py  analyzer.py  api.py  cases.py  classifier.py  cli.py  config.py  llm.py  models.py  parser.py  render.py
tests/: test_analyzer.py  test_api.py  test_parser.py
